Closed Bug 1579671 Opened 5 years ago Closed 5 years ago

Assertion failure: aNumTracks >= aFunctions.mExplicitGridOffset + aFunctions.NumExplicitTracks()

Categories

(Core :: Layout: Grid, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- disabled
firefox-esr68 --- disabled
firefox69 --- disabled
firefox70 --- disabled
firefox71 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file Testcase

STR

  1. Use a Nightly DEBUG build
  2. load the attached testcase

ACTUAL RESULTS

Assertion failure: aNumTracks >= aFunctions.mExplicitGridOffset + aFunctions.NumExplicitTracks(), at layout/generic/nsGridContainerFrame.cpp:4493

Blocks: 1579993

Bug 1579993 adds tests that triggered this assertion.

Blocks: 1580894
Pushed by mpalmgren@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4fe410147ca0
Remove assertion that fails for subgrid.  r=dholbert
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → mats
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: