Bug 1579671 - Remove assertion that fails for subgrid.  r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D45235